--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Notes</h1>
-        
+    <div class="container">
+        <h1><img src="images/notes.png">Notes</h1>
+        <button><img src="images/edit.png">Create Note</button>
+        <div class="notes-container">
+            <!-- <p contenteditable="true" class="input-box">
+                <img src="images/delete.png">
+            </p> -->
+        </div>
     </div>
+
+    <script src="app.js"></script>
 </body>
-<script src="app.js"></script>
+
 </html>
