--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1><img src="images/notes.png">Notes</h1>
-        <button><img src="images/edit.png">Create Note</button>
+        <h1><a href="./index.html"><img src="images/notes.png"></a>Notes</h1>
+        <button class="btn"><img src="images/edit.png">Create Note</button>
         <div class="notes-container">
             <!-- <p contenteditable="true" class="input-box">
                 <img src="images/delete.png">
